fix keyboard key color dark mode

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,7 +26,7 @@
   --color-unknown: #909090;
   --color-tile-invalid-word: #441111;
   --color-tile-invalid-word-border: #555555;
-  --color-keyboard-key: #b0b0b0;
+  --color-keyboard-key: #b0b0b5;
   --color-keyboard-text: black;
   --color-text-default: #e3e3e3;
   --color-tile-text: white;
